fix: responsive on mobile

--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -43,7 +43,7 @@
   max-width: 1500px;
   margin: auto;
   h1 {
-    font-size: 5rem;
+    font-size: 3rem;
     font-weight: 900;
 
     background-image: linear-gradient(45deg, #452cfd, #00b7ff);
@@ -80,9 +80,11 @@
   &__courses {
     display: flex;
     flex-direction: column;
-
+    h2 {
+      font-size: 3rem;
+    }
     img {
-      width: 30rem;
+      width: 100%;
       transition: all 0.2s;
       margin-top: 1rem;
       &:hover {
@@ -100,10 +102,17 @@
   right: 0;
   background-color: rgb(0, 0, 0, 0.5);
   padding-top: 10%;
+  overflow-y: auto;
+  h1 {
+    font-size: 2.5rem;
+  }
 
+  &__grid--3 {
+    margin-bottom: 4rem;
+  }
   &__body {
-    width: 70vw;
-    height: 70vh;
+    width: 80%;
+
     border-radius: 20px;
     background-color: white;
     margin: auto;
@@ -115,7 +124,7 @@
       border-radius: 10%;
       font-weight: 900;
       color: #7780fc;
-      margin: 20px;
+      margin: 10px;
       outline: none;
       transition: all 0.2s;
       &:hover {
@@ -130,35 +139,32 @@
   }
 
   &__card {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
 
     img {
-      width: 32rem;
-      height: 20rem;
+      width: 100%;
+      height: 10rem;
 
       object-fit: cover;
       box-shadow: 0 1rem 2rem rgba(#000, 0.2);
       border-radius: 20px;
     }
-    ul {
-      display: inline-block;
-    }
+    // ul {
+    //   display: inline-block;
+    // }
     p {
       line-height: 1.7;
-      margin: 1rem 3rem 0 0;
+      margin: 1rem 0;
     }
     a {
-      height: 54rem;
-      width: 150rem;
       border-radius: 50px;
       font-family: $primaryFont;
-      padding: 1rem 2rem;
+      padding: 1rem 1rem;
       font-weight: 800;
       color: #7780fc;
       text-decoration: none;
       cursor: pointer;
-      margin: 2rem 2rem 2rem 0;
+      margin-right: 1rem;
       box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       transition: all 0.3s ease 0s;
       border: none;
@@ -171,71 +177,71 @@
   }
 }
 
-@media screen and (max-width: 1400px) {
-  .pop-up {
-    &__body {
-      height: 100%;
-      width: 90%;
-      padding: 1rem;
-    }
+// @media screen and (max-width: 1400px) {
+//   .pop-up {
+//     &__body {
+//       height: 100%;
+//       width: 90%;
+//       padding: 1rem;
+//     }
 
-    &__grid--2 {
-      padding: 1rem;
-    }
-    &__card {
-      grid-template: none;
-      overflow-y: auto;
+//     &__grid--2 {
+//       padding: 1rem;
+//     }
+//     &__card {
+//       grid-template: none;
+//       overflow-y: auto;
 
-      img {
-        width: 60%;
-        height: 70%;
-      }
-    }
-  }
-}
+//       img {
+//         width: 60%;
+//         height: 70%;
+//       }
+//     }
+//   }
+// }
 
-@media screen and (max-width: 430px) {
-  .project {
-    h1 {
-      font-size: 3.5rem;
-    }
-    img {
-    }
+// @media screen and (max-width: 430px) {
+//   .project {
+//     h1 {
+//       font-size: 3.5rem;
+//     }
+//     img {
+//     }
 
-    &__courses {
-      h2 {
-        font-size: 3.5rem;
-      }
-      img {
-        width: 100%;
-      }
-    }
-  }
-  .pop-up {
-    &__grid--1 p {
-      padding: none;
-    }
-    &__body {
-      height: 100%;
-      width: 90%;
-      .card-title {
-        font-size: 3.5rem;
-      }
-      p {
-        margin: 1;
-        padding: none;
-      }
-    }
+//     &__courses {
+//       h2 {
+//         font-size: 3.5rem;
+//       }
+//       img {
+//         width: 100%;
+//       }
+//     }
+//   }
+//   .pop-up {
+//     &__grid--1 p {
+//       padding: none;
+//     }
+//     &__body {
+//       height: 100%;
+//       width: 90%;
+//       .card-title {
+//         font-size: 3.5rem;
+//       }
+//       p {
+//         margin: 1;
+//         padding: none;
+//       }
+//     }
 
-    &__grid--2 {
-    }
-    &__card {
-      grid-template: none;
-      overflow-y: auto;
+//     &__grid--2 {
+//     }
+//     &__card {
+//       grid-template: none;
+//       overflow-y: auto;
 
-      img {
-        width: 60%;
-      }
-    }
-  }
-}
+//       img {
+//         width: 60%;
+//       }
+//     }
+//   }
+// }
